[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/enemies/SandSentry/enemyFloating_3.png" type="Texture" id=1]
[ext_resource path="res://Assets/enemies/SandSentry/enemyFloating_1.png" type="Texture" id=2]
[ext_resource path="res://Scripts/SandSentry.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 360.822

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 21.2697, 19.8427 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "awake",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "sleep",
"speed": 5.0
} ]

[sub_resource type="Animation" id=4]
resource_name = "moving"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.176777, -141.604 ), Vector2( -138.823, -0.155 ), Vector2( 0.177, 141.449 ), Vector2( 139, -0.155 ), Vector2( 0.177, -141.604 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 720.0, 1440.0, 2160.0, 2880.0, 3060.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("wake:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.177, -141.604 ), Vector2( -138.823, -0.155 ), Vector2( 0.177, 141.449 ), Vector2( 139, -0.155 ), Vector2( 0.177, -141.604 ) ]
}

[sub_resource type="Animation" id=5]
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 20.0, -20.0, 10.0, -10.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.177, -0.088 ) ]
}

[node name="SandSentry" type="Area2D"]
collision_layer = 16
script = ExtResource( 3 )

[node name="detection" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection"]
shape = SubResource( 1 )

[node name="wake" type="CollisionShape2D" parent="."]
position = Vector2( 0.177, -141.604 )
shape = SubResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.177, -0.088 )
frames = SubResource( 3 )
animation = "sleep"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/moving = SubResource( 4 )
anims/sleeping = SubResource( 5 )
[connection signal="body_entered" from="." to="." method="_on_SandSentry_body_entered"]
[connection signal="body_entered" from="detection" to="." method="_on_detection_body_entered"]
[connection signal="body_exited" from="detection" to="." method="_on_detection_body_exited"]
